syntax = "proto3";

package user_info;
//option go_package = ".;protobuf";

message Book {
	string name =1;
	uint32 pageNum = 2;
}

message UserInfo {
	string username = 1;
	uint32 age1      = 2;
	string graduate = 3;
	repeated Book bookList = 4;
	//string addv = 5;
}
